--- a/tutorials/03-CurveFitting-TensorFlow.ipynb
+++ b/tutorials/03-CurveFitting-TensorFlow.ipynb
@@ -375,10 +375,32 @@
       "metadata": {
         "id": "uDHZJiUGv-X8",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 505
+        },
+        "outputId": "488cd519-752e-47d9-a9c0-2260fb1d78f4"
       },
       "cell_type": "code",
       "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import tensorflow as tf\n",
+        "import random\n",
+        "import numpy as np\n",
+        "\n",
+        "# get ground-truth data from the \"true\" model \n",
+        "n = 100 \n",
+        "w = [4, 3, 2, 1]\n",
+        "x = np.linspace(-1,1,n)[:,np.newaxis]\n",
+        "t = np.matmul(np.power(np.reshape(x,[-1,1]), \n",
+        "                       np.linspace(len(w)-1,0,len(w))), w)\n",
+        "std_noise = 0.2\n",
+        "t_observed = np.reshape(\n",
+        "    [t[idx]+random.gauss(0,std_noise) for idx in range(n)],\n",
+        "    [-1,1])\n",
+        "\n",
+        "loss_val = np.array([])\n",
+        "\n",
         "# build a new graph\n",
         "ph_1x = tf.placeholder(tf.float32, [1, 1])\n",
         "ph_1t = tf.placeholder(tf.float32, [1, 1])\n",
@@ -402,7 +424,7 @@
         "sess.run(tf.global_variables_initializer())  # initialise all the variables\n",
         "\n",
         "# iteration to update variables with backprop gradients\n",
-        "total_iter = int(1e4)\n",
+        "total_iter = int(1e1)\n",
         "indices_train = [i for i in range(n)]\n",
         "for step in range(total_iter):\n",
         "\n",
@@ -415,11 +437,16 @@
         "        ph_1x:x[indices_train[idx],np.newaxis], \n",
         "        ph_1t:t_observed[indices_train[idx],np.newaxis] }\n",
         "    \n",
-        "    # print for testing\n",
-        "    #print(singleDataFeed)\n",
         "    \n",
         "    # update the variables\n",
         "    sess.run(train_op, feed_dict=singleDataFeed)\n",
+        "    \n",
+        "    if (step % 1) == 0:\n",
+        "        loss_train = sess.run(loss, feed_dict=singleDataFeed)\n",
+        "        np.append(loss_val,loss_train)\n",
+        "        print(loss_val)\n",
+        "        #plt.plot(range(step+1),loss_val)\n",
+        "        #plt.draw()\n",
         "    \n",
         "    # print training information\n",
         "    if (step % 200) == 0:\n",
@@ -435,8 +462,42 @@
         "print(w_sgd)\n",
         "sess.close()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "WARNING:tensorflow:From <ipython-input-1-0696ee9af947>:24: to_float (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Use tf.cast instead.\n",
+            "WARNING:tensorflow:From /usr/local/lib/python2.7/dist-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+            "Instructions for updating:\n",
+            "Colocations handled automatically by placer.\n",
+            "[]\n",
+            "Step 0: Loss=2.718447\n",
+            "Estimated weights:\n",
+            "[[0.01513754]\n",
+            " [0.04645914]\n",
+            " [0.14280471]\n",
+            " [0.42563635]]\n",
+            "[]\n",
+            "[]\n",
+            "[]\n",
+            "[]\n",
+            "[]\n",
+            "[]\n",
+            "[]\n",
+            "[]\n",
+            "[]\n",
+            "Final weights at step 9:\n",
+            "[[0.42778555]\n",
+            " [0.63564104]\n",
+            " [1.1414696 ]\n",
+            " [1.4073545 ]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "metadata": {
